<?xml version="1.0"?>
<package format="2">
  <name>livox_sdk</name>
  <version>0.0.0</version>
  <description>The livox_sdk package</description>
  <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>